--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^7.3.1",
     "@tailwindcss/postcss": "^4.1.12",
     "@xyflow/react": "^12.8.4",
+    "axios": "^1.11.0",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
