--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -9,7 +9,7 @@ env:
   PROJECT_ID: 'chat-automation-387710'
   REGION: 'us-central1'
   SERVICE: 'solo'
-  WORKLOAD_IDENTITY_PROVIDER: 'projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider'
+  WORKLOAD_IDENTITY_PROVIDER: 'iam.googleapis.com/projects/1094964097817/locations/global/workloadIdentityPools/github-identity-pool/providers/github-provider'
 
 jobs:
   deploy:
@@ -28,6 +28,7 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           workload_identity_provider: ${{ env.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: "mkbeefcake@chat-automation-387710.iam.gserviceaccount.com"
 
       - name: Docker Auth
         uses: docker/login-action@v3
